@@ -1,5 +1,13 @@
 2004-02-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
+	* support/Util/SDCCerr.h,
+	* support/Util/SDCCerr.c,
+	* src/SDCCast.c (decorateType, sizeofOp): complain when sizeof is used
+	with an incomplete type (fixed bug #883734)
+	* src/SDCCicode.c (geniCodeCast): fixed bug #890510
+
+2004-02-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
 	* src/pic16/gen.c (genCmpEq, shiftRLong): fixed declarations
 
 2004-02-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
